# scylla

./: .env  Cargo.toml  README.md  env.example
.github/workflows/: release.yml
src/: config.rs  logger.rs  main.rs  updater.rs
